hide make request

--- a/index.html
+++ b/index.html
@@ -14057,7 +14057,7 @@ const host = "http://test.fawtarha.com:6006";
               access to branch information tailored to your organization's
               needs.
             </p>
-            <div>
+            <!-- <div>
               <label for="orgid">Organization Id:</label>
               <input type="text" id="orgid" name="orgid">
               <br><br>
@@ -14065,11 +14065,11 @@ const host = "http://test.fawtarha.com:6006";
                 Token:&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</label>
               <input type="text" id="token" name="token">
 
-            </div>
+            </div> -->
             <br>
 
-            <button class="btn btn-primary" onclick="makeRequest()">Make
-              Request</button>
+            <!-- <button class="btn btn-primary" onclick="makeRequest()">Make
+              Request</button> -->
             <br>
             <br>
 
@@ -14212,8 +14212,8 @@ const host = "http://test.fawtarha.com:6006";
               </div>
             </div>
 
-            <button class="btn btn-primary" onclick="makeRequestVat()">Make
-              Request</button>
+            <!-- <button class="btn btn-primary" onclick="makeRequestVat()">Make
+              Request</button> -->
             <br>
             <br>
             <div id="loader-vat" class="loader"></div>
@@ -14337,7 +14337,7 @@ const host = "http://test.fawtarha.com:6006";
               <input type="number" id="vat_category_id" name="vat_category_id">
             </div>
             <br>
-            <button class="btn btn-primary" onclick="makeRequestExemption()">Make Request</button>
+            <!-- <button class="btn btn-primary" onclick="makeRequestExemption()">Make Request</button> -->
             <br>
             <br>
             <div id="loader-Exemption" class="loader"></div>
@@ -14442,7 +14442,7 @@ const host = "http://test.fawtarha.com:6006";
               </div>
             </div>
             <br>
-            <button class="btn btn-primary" onclick="makeRequestCurrency()">Make Request</button>
+            <!-- <button class="btn btn-primary" onclick="makeRequestCurrency()">Make Request</button> -->
             <br>
             <br>
             <div id="loader-Currency" class="loader"></div>
@@ -14550,7 +14550,7 @@ const host = "http://test.fawtarha.com:6006";
               </div>
             </div>
             <br>
-            <button class="btn btn-primary" onclick="makeRequestPaymentMethod()">Make Request</button>
+            <!-- <button class="btn btn-primary" onclick="makeRequestPaymentMethod()">Make Request</button> -->
             <br>
             <br>
             <div id="loader-PaymentMethod" class="loader"></div>
@@ -14659,7 +14659,7 @@ const host = "http://test.fawtarha.com:6006";
               </div>
             </div>
             <br>
-            <button class="btn btn-primary" onclick="makeRequestUnitOfMeasure()">Make Request</button>
+            <!-- <button class="btn btn-primary" onclick="makeRequestUnitOfMeasure()">Make Request</button> -->
             <br>
             <br>
             <div id="loader-UnitOfMeasure" class="loader"></div>
@@ -15300,7 +15300,7 @@ const host = "http://test.fawtarha.com:6006";
             }
             </textarea>
             <br>
-            <button class="btn btn-primary" onclick="makeRequestInvoice()">Make Request</button>
+            <!-- <button class="btn btn-primary" onclick="makeRequestInvoice()">Make Request</button> -->
             <br>
             <br>
             <div id="loader-Invoice" class="loader"></div>
